fix duplicate remove bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 bin/*
 
-core/Acceptor
-core/Address
-core/EventLoop
-core/Selector
-core/MsgHandler
-core/Socket
-core/SocketHandler
+src/core/Acceptor
+src/core/Address
+src/core/EventLoop
+src/core/Selector
+src/core/MsgHandler
+src/core/Socket
+src/core/SocketHandler
 extras/Client
 extras/EPollServer
 extras/Server
