--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ src/core/Selector
 src/core/MsgHandler
 src/core/Socket
 src/core/SocketHandler
+src/ccomet/HttpInstance
 src/utils/Log
 extras/Client
 extras/EPollServer
